is_official_build = true
use_official_google_api_keys = false
google_api_key = "no"
google_default_client_id = "no"
google_default_client_secret = "no"
is_component_build = false
is_debug = false
rtc_use_h264 = false
rtc_build_examples = false
media_use_ffmpeg = true
media_use_libvpx = true
proprietary_codecs = true
use_openh264 = true
ffmpeg_branding = "Chrome"
visual_studio_version = "2019"
blink_symbol_level = 0
enable_iterator_debugging = false
enable_nacl = false
current_cpu = "x64"
target_cpu = "x64"
is_clang = true
symbol_level = 0
thin_lto_enable_optimizations = true
use_thin_lto = true
use_lld = true
chrome_pgo_phase = 0
full_wpo_on_official = true
use_incremental_wpo = true
enable_debugallocation = false
enable_profiling = false
enable_widevine = false
enable_hangout_services_extension = false
enable_iterator_debugging = false
enable_profiling = false
is_chrome_branded = false
fieldtrial_testing_like_official_build = true
enable_reporting = false
exclude_unwind_tables = true
enable_resource_whitelist_generation = false
